--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ nav {
   margin-bottom: 1.5rem;
 }
 
-.status {
+a.status {
   display: inline-block;
   padding: 0.5rem 1rem;
   border-radius: 20px;
@@ -187,6 +187,7 @@ nav {
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.5px;
+  text-decoration: none;
 }
 
 .status-development {
