--- a/css/styles.css
+++ b/css/styles.css
@@ -284,8 +284,8 @@ nav {
     transform: translate(-50%, -49%) scale(1.03);
   }
   100% {
-    /* center left */
-    transform: translate(-50.5%, -50%) scale(1.02);
+    /* center */
+    transform: translate(-50%, -50%) scale(1.02);
   }
 }
 
@@ -306,7 +306,7 @@ nav {
   font-size: 5.5rem;
   margin-bottom: 1.5rem;
   background: var(--gradient-primary);
-  -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 300;
   letter-spacing: -1px;
